# glyphana

./: .gitattributes  CLAUDE.md  Cargo.toml  EULA.md  EULA2.md  FUNDING.yml  README.md  TODO.md  about.toml  deny.toml  index.html  licenses.html
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
src/: app.rs  categories.rs  character_sets.rs  glyph.rs  lib.rs  main.rs  search.rs  ui.rs
wix/: EULA.rtf  main.wxs
