[package]
name = "glyphana"
version = "0.2.1"
authors = ["Moritz Moeller <virtualritz@gmail.com>"]
edition = "2024"
description = "Quickly find, inspect & collect unicode glyps"
rust-version = "1.85"
license = "(MIT OR Apache-2.0 OR BSD-3-Clause) AND OFL-1.1"
exclude = [".github/**/*", "wix/*"]
readme = "README.md"
documentation = "https://docs.rs/glyphana/"
repository = "https://github.com/virtualritz/glyphana/"

[features]
## Make `egui` comptaible with screen readers. **Adds a lot of dependencies.**
accesskit = ["eframe/accesskit"]
# Alternative backend if default, `glow`, gives your trouble.
wgpu = ["eframe/wgpu"]

[lib]
name = "glyphana"
path = "src/lib.rs"

[[bin]]
name = "glyphana"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # Enable wayland support for Linux
    "x11",           # Enable X11 support for Linux
] }
egui = "0.32"
egui_dnd = "0.13"
finl_unicode = "1.3"
glyph-names = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
include-flate = "0.3"
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }
#tray-icon = "0.4.3"
unicode-blocks = "0.1"
unicode-case-mapping = "1"
unicode_names2 = "2.0"
unicode-normalization = "0.1"
unicode_skeleton = "0.1"
stringzilla = "3"
textwrap = "0.16"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3 # 2 = fast and small
codegen-units = 1
lto = true
strip = true
panic = "abort"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
#incremental = true

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
#debug = true
#split-debuginfo = "packed"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3-prerelease04"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "nightly"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
